# Lista_spesa_lab_prog

./: CMakeLists.txt  Category.cpp  Category.h  Item.cpp  Item.h  Listonic.cpp  Listonic.h  ListonicObserver.cpp  ListonicObserver.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  ObserverMock.h  Test_User.cpp  Test_User_Fixture.cpp  runAllTest.cpp  test_Listonic.cpp  test_listonic_Fixture.cpp
test/lib/googletest/include/gtest/: gtest.h
test/lib/googletest/include/gtest/internal/: gtest-internal.h  gtest-port.h
test/lib/googletest/src/: gtest-port.cc  gtest.cc
test/lib/googletest/test/: gtest-death-test_test.cc  gtest-filepath_test.cc  gtest-options_test.cc  gtest-port_test.cc  gtest_break_on_failure_unittest_.cc  gtest_unittest.cc
